# EM1-Python

./: .gitignore  EM1PythonClasses.py  EM1PythonDictionaries.py  EM1PythonFunctions.py  EM1PythonFunctionsNew.py  Metis_processing.py  README.md  all_together_for_profiling.py  individual_file_examination.py  main.py  main_new.py  metis_analysis_experimental.py  openmat.py  pandas_test.py  profile.html  profile.json  pyproject.toml  regex_file_loading.py  understanding_mat.py  week1(varying_Pnbi).py  week2(varying_B0).py  week2(varying_Ip).py  week2(varying_nbar).py  week2(varying_others).py  week3(full_ramp).py  week3(stepped_ramp).py
EM1 Data/1st Run Data (fast mode)/: .2023-01-20 1100 First Run (PNBI Multiplier of 1e0).mat.icloud  .2023-01-20 1100 First Run (PNBI Multiplier of 1e1).mat.icloud  .2023-01-20 1100 First Run (PNBI Multiplier of 1e2).mat.icloud  .2023-01-20 1100 First Run (PNBI Multiplier of 1e3).mat.icloud  .2023-01-20 1100 First Run (PNBI Multiplier of 1e4).mat.icloud  .2023-01-20 1100 First Run (PNBI Multiplier of 1e5).mat.icloud  .2023-01-20 1100 First Run (PNBI Multiplier of 1e6).mat.icloud  .2023-01-20 1100 First Run (PNBI Multiplier of 1e7).mat.icloud  2023-01-20 1100 First Run (PNBI Multiplier of 1e1).mat  2023-01-20 1100 First Run (PNBI Multiplier of 1e2).mat  2023-01-20 1100 First Run (PNBI Multiplier of 1e3).mat  2023-01-20 1100 First Run (PNBI Multiplier of 1e4).mat
EM1 Data/Misc Data to Plot/: readme.txt  (+1 more)
EM1-Python/: README.md  pyproject.toml
EM1-Python/src/em1_python/: __init__.py
METIS misc/: .defaultjet.mat.icloud  defaultjet.mat
(+348 files in other folders)
