[tool.poetry]
name = "em1-python"
version = "0.1.0"
description = "Python package/scripts for third year EM1 laboratory experiment at the University of York, UK."
authors = ["csg524 <csg524@york.ac.uk>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "em1_python"}]

[tool.poetry.dependencies]
python = ">=3.11 <3.12"
mypy = "^1.3.0"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
