[project]
name = "em1-python"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "csg524", email = "csg524@york.ac.uk" }
]
dependencies = ["scipy~=1.10.1", "pandas~=2.0.1", "numpy~=1.24.3", "matplotlib~=3.7.1", "mypy~=1.3.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
