[project]
name = "em1-python"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "csg524", email = "csg524@york.ac.uk" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
